# pickle-rick

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md
.circleci/: config.yml
docs/: UMLforDataBase.xmi
include/: CommonFileBase.h  File.h  FileBase.h  TextFile.h
include/DataBase/: Admins.h  Competitors.h  Contest.h  DataBaseMySQL.h  IAdmins.h  ICompetitors.h  IContest.h  IDataBase.h  IDataBaseMySQL.h  ITable.h  ITasks.h  Ilogs.h  Tasks.h  logs.h
include/lib/DataBase/: Admins.h  Competitors.h  Contest.h  DataBaseMySQL.h  IAdmins.h  ICompetitors.h  IContest.h  IDataBase.h  ILogs.h  ITable.h  ITasks.h  Logs.h  Tasks.h
include/libFileStorage/: ContestFileManagerInMemory.h  ContestantInfo.h  File.h  Folder.h  IContestFileManager.h  IFile.h  IFileSystemObject.h  IStorage.h  IStorageManager.h
libdatabase/docs/: UMLforDataBase.xmi
libdatabase/include/: Admins.h  Competitors.h  Contest.h  DataBaseMySQL.h  IAdmins.h  ICompetitors.h  IContest.h  IDataBase.h  ILogs.h  ISessions.h  ISolutions.h  ITasks.h  IUsers.h  Logs.h  Sessions.h  Solutions.h  Tasks.h  Users.h
libdatabase/src/: Admins.cpp  Competitors.cpp  Contest.cpp  DataBaseMySQL.cpp  Logs.cpp  Sessions.cpp  Solutions.cpp  Tasks.cpp  Users.cpp
libfilebase/: CMakeLists.txt
libfilebase/include/: ContestFileInfo.h  ContestStorage.h  Downloader.h  FileInfo.h  FileSystem.h  Folder.h  IFile.h  IFileSystemObject.h  ILinkGenerator.h  IStorage.h  MemoryFile.h
libfilebase/src/: ContestStorage.cpp  Downloader.cpp  FileSystem.cpp  Folder.cpp  MemoryFile.cpp
libfilebase/test/src/: main.cpp
libparser/: CMakeLists.txt
libparser/include/: IParser.h  MultipartParser.h
libparser/src/: MultipartParser.cpp
libparser/test/src/: main.cpp
libscheduler/: CMakeLists.txt
libscheduler/include/: consumer.h  data_container.h  i_queue.h  producer.h  queue.h  scheduler.h  string_consumer.h  string_producer.h
libscheduler/src/: consumer.cpp  consumer.h  data_container.cpp  data_container.h  i_queue.cpp  i_queue.h  producer.h  queue.h  string_consumer.cpp  string_consumer.h  string_producer.cpp  string_producer.h
libworkerclient/: CMakeLists.txt
libworkerclient/include/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h  Slot.h  Task.h  WorkerApi.h
libworkerclient/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp  Slot.cpp  Task.cpp  WorkerApi.cpp
server/: CMakeLists.txt  main.cpp
server/api/: DatabaseApi.cpp  DatabaseApi.h  SchedulerApi.cpp  SchedulerApi.h  StorageApi.cpp  StorageApi.h
server/impl/: DatabaseApiImpl.cpp  DatabaseApiImpl.h  SchedulerApiImpl.cpp  SchedulerApiImpl.h  StorageApiImpl.cpp  StorageApiImpl.h
server/model/: Contest.cpp  Contest.h  ContestData.cpp  ContestData.h  ContestFiles.cpp  ContestFiles.h  ContestFilesId.cpp  ContestFilesId.h  ContestId.cpp  ContestId.h  Helpers.cpp  Helpers.h  SessionId.cpp  SessionId.h  Solution.cpp  Solution.h  SolutionData.cpp  SolutionData.h  SolutionFiles.cpp  SolutionFiles.h  SolutionFilesId.cpp  SolutionFilesId.h  SolutionId.cpp  SolutionId.h  Task.cpp  Task.h  TaskData.cpp  TaskData.h  TaskFile.cpp  TaskFile.h  TaskFileId.cpp  TaskFileId.h  TaskFileId_allOf.cpp  TaskFileId_allOf.h  TaskId.cpp  TaskId.h  User.cpp  User.h  UserData.cpp  UserData.h  (+4 more)
src/: Rickled_Contest.cpp
src/DataBase/: main.cpp
src/lib/DataBase/: Admins.cpp  Competitors.cpp  Contest.cpp  DataBase.cpp  DataBaseMySQL.cpp  Logs.cpp  Tasks.cpp
src/libFileBase/: ContestFileManagerInMemory.cpp  DummyFile.cpp  Folder.cpp  stubs.cpp
test/lib/DataBase/: test.cpp
test/src/DataBase/: test.cpp
test/src/libFileBase/: main.cpp
